--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
+    "cowsay": "^1.5.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0"
   }
