--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "no-console": "off",
     "no-trailing-spaces": "error",
-    "no-plusplus": "off"
+    "no-plusplus": "off",
+    "no-unused-vars": "off"
   }
 }
